# londogard

./: .gitignore  .nojekyll  404.html  CNAME  Londogard.html  README.md  _brand.yml  _config.yml  _quarto.yml  about.html  blog.html  docusaurus.config.js  feed.xml  hampus_cv.qmd.hidden  index.html  index.qmd  index.xml  listings.json  londogard.html  markdown-page.html  package-lock.json  package.json  presentations.html  presentations.qmd  pyproject.toml  robots.txt  search.json  settings.ini  sitemap.xml
.devcontainer/: devcontainer.json
.metals/: metals.lock.db  metals.mv.db
_action_files/: settings.ini
_data/: navigation.yml
_fastpages_docs/: _setup_pr_template.md  _upgrade_pr.md
_layouts/: redirect.html
_notebooks/: 2020-08-01-faq-search-covid-2.ipynb  2021-02-18-transformers-explained.ipynb  2021_02_18_transformers_explained.ipynb  CoViD_19_QA_cont.ipynb
_pages/: about.html  about.md  education.html  londogard.html  londogard.md
_posts/: 2020-02-10-gradle-github-packages.md  2020-02-23-competence-meeting-imdb-text-classification.md  2020-03-31-email-generator-kotlin-tipsrundan.md  2020-05-13-faq-search-covid-1.md  2020-06-01-sqldelight-kotlin.md  2020-08-01-faq-search-covid-2.md  2020-09-03-til-badass-runtime.md  2020-09-03-til-fastutil-primitive-structures.md  2020-09-04-til-sdkman.md  2020-11-07-snake-kotlin-multiplatform.md  2020-12-12-transfer-learning-presentation.md  2020-12-16-object-detection-transformer.md  2021-01-21-gitpod-kotlin-jvm.md  2021-01-21-til-gitpod-kotlin-jvm.md  2021-03-17-replace-in-string.md  2021-05-17-seam-carving.md  (+5 more)
(+698 files in other folders)
