[tool.poetry]
name = "londogard"
version = "0.1.0"
description = ""
authors = ["Hampus Londögård <hampus.londogard@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
scikit-learn = "^1.0.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
